# gdal_test

./: .gitignore  convert_all.sh  devbox.json  docker-compose.yml  dockerfile  pyproject.toml  server.py  taskfile.yaml  test_oracle.py
dlt2/: .env  giss.py  test.py  test2.py
dlt_pipeline/: github_issues.duckdb  github_issues.py
dlt_pipeline/giss/: WANTED_TABLES copy.csv  WANTED_TABLES.csv  export_oracle_giss.py  export_oracle_giss_paralell.py  test_smal_number.py
